# gpp4

./: .bzrignore  .gitignore  AUTHORS  COPYRIGHT  ChangeLog  Doxyfile.in  Makefile.am  Makefile.in  NEWS  README  README-bzr.txt  README.git  bootstrap  configure  configure.ac  gpp4.info.in  gpp4.m4  gpp4.pc.in  gpp4.spec.in  gpp4f.pc.in
data/: Makefile.am  Makefile.in  default.def  environ.def
debian/: changelog  control  copyright  libgpp4-0.install  libgpp4-0.symbols  libgpp4-dev.install  libgpp4-doc.doc-base  libgpp4f-0.install  libgpp4f-dev.install  rules  watch
lib/: .gitignore  Doxyfile  Doxyfile.in  Makefile.am  Makefile.in  ccp4_array.c  ccp4_array.h  ccp4_errno.h  ccp4_file_err.h  ccp4_fortran.h  ccp4_general.c  ccp4_general.h  ccp4_parser.c  ccp4_parser.h  ccp4_program.c  ccp4_program.h  ccp4_spg.h  ccp4_sysdep.h  ccp4_types.h  ccp4_unitcell.c  ccp4_unitcell.h  ccp4_utils.h  ccp4_vars.h  cmap_accessor.c  cmap_close.c  cmap_data.c  cmap_data.h  cmap_errno.h  cmap_header.c  cmap_header.h  cmap_labels.c  cmap_labels.h  cmap_open.c  cmap_skew.c  cmap_skew.h  cmap_stats.c  cmap_stats.h  cmap_symop.c  cmaplib.h  cmaplib_f.h  (+14 more)
pyext/: Makefile.am  gpp4.i
src/: Makefile.am  ccp4_array.c  ccp4_array.h  ccp4_errno.h  ccp4_file_err.h  ccp4_fortran.h  ccp4_general.c  ccp4_general.h  ccp4_parser.c  ccp4_parser.h  ccp4_program.c  ccp4_program.h  ccp4_program.h.in  ccp4_spg.h  ccp4_sysdep.h  ccp4_types.h  ccp4_unitcell.c  ccp4_unitcell.h  ccp4_utils.h  ccp4_vars.h  cmap_accessor.c  cmap_close.c  cmap_data.c  cmap_data.h  cmap_errno.h  cmap_header.c  cmap_header.h  cmap_labels.c  cmap_labels.h  cmap_open.c  cmap_skew.c  cmap_skew.h  cmap_stats.c  cmap_stats.h  cmap_symop.c  cmaplib.h  cmaplib_f.h  cmtzlib.c  cmtzlib.h  csymlib.c  (+13 more)
src_f/: Makefile.am  ccp4_diskio_f.c  ccp4_general_f.c  ccp4_parser_f.c  ccp4_unitcell_f.c  ccplib.f  cmaplib_f.c  cmtzlib_f.c  csymlib_f.c  dna_header.fh  dna_output.f  fftlib.f  keyparse.f  libhtml.f  library_f.c  modlib.f  pack_f.f  parser.f  rwbrook.f  unix.m4
test/: Makefile.am  checkarch.c  hdr.c  load_syminfo.c  maphdr.c  mtz2csv.c  mtzcols.c  mtzhdr.c  trymtz.c
util/: Makefile.am  fsplit.c
