
lib_LTLIBRARIES = libccp4c.la
library_includedir=$(includedir)/ccp4

libccp4c_la_SOURCES = \
ccp4_array.c     cmap_data.c    cmtzlib.c       \
ccp4_general.c   cmap_header.c  csymlib.c       \
ccp4_parser.c    cmap_labels.c  cvecmat.c       \
ccp4_program.c   cmap_open.c    library_err.c   \
ccp4_unitcell.c  cmap_skew.c    library_file.c  \
cmap_accessor.c  cmap_stats.c   library_utils.c \
cmap_close.c     cmap_symop.c


library_include_HEADERS = \
ccp4_array.h     ccp4_unitcell.h  cmap_stats.h \
ccp4_errno.h     ccp4_utils.h     cmtzlib.h    \
ccp4_file_err.h  ccp4_vars.h      csymlib.h    \
ccp4_fortran.h   cmap_data.h      cvecmat.h    \
ccp4_general.h   cmap_errno.h     library_f.h  \
ccp4_parser.h    cmap_header.h    library_file.h \
ccp4_program.h   cmap_labels.h    mtzdata.h    \
ccp4_spg.h       cmaplib_f.h      overview.h   \
ccp4_sysdep.h    cmaplib.h        w32mvs.h     \
ccp4_types.h     cmap_skew.h




