## -*- mode: Makefile ; mode: font-lock -*- 
## Version: $Id: Makefile.am,v 0.0 2007/08/13 14:01:13 mok Exp $
## Author: mok@homunculus.local
## Copyright 2007 Morten Kjeldgaard
## This code is distributed under the GPL license.

AM_CPPFLAGS = -I$(top_srcdir)/lib
AM_LDFLAGS = $(top_srcdir)/lib/libgpp4.la

noinst_PROGRAMS = load_syminfo

load_syminfo_SOURCES = load_syminfo.c

####
